--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -2,22 +2,44 @@ name: assignment-test
 
 on:
   push:
+    tags-ignore:
+      - '*'
     branches:
-      - main
-  pull_request:
+      - '*'
 
 jobs:
-  build:
+  full-test:
     runs-on: ubuntu-latest
+    container: cuaesd/aesd-autotest:24-assignment5-buildroot
+
     steps:
-      - name: Checkout code
+      - name: Checkout repo with submodules
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          submodules: recursive
 
-      - name: Set up build environment
+      - name: Cache Buildroot downloads
+        uses: actions/cache@v3
+        with:
+          path: buildroot/dl
+          key: buildroot-dl-${{ hashFiles('**/Config.in') }}
+
+      - name: Show system info
         run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential  # Add any dependencies you need
+          echo "CPU Info:"
+          lscpu
+          echo "Memory:"
+          free -h
+          echo "Disk Space:"
+          df -h
+          echo "Available cores: $(nproc)"
 
-      - name: Run full-test script
-        run: ./full-test
+      - name: Run full test with parallel build
+        run: |
+          echo "Starting test at $(date)"
+          chmod +x ./full-test.sh
+          export MAKEFLAGS="-j$(nproc)"
+          ./full-test.sh
+          echo "Test completed at $(date)"
 
