--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -2,50 +2,39 @@ name: assignment-test
 
 on:
   push:
-    tags-ignore:
-      - '*'
     branches:
-      - '*'
+      - '**'  # Triggers the workflow on push to any branch
 
 jobs:
   full-test:
-    runs-on: self-hosted
-    container: cuaesd/aesd-autotest:24-assignment7-buildroot
+    runs-on: self-hosted  # Ensures the job runs on a self-hosted runner
+    container: cuaesd/aesd-autotest:24-assignment5-buildroot  # Specifies the Docker container to use
+    timeout-minutes: 120  # Sets a maximum run time for the job
 
     steps:
-      - name: Checkout repo with submodules
-        uses: actions/checkout@v3
+      - name: Checkout repository with submodules
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          submodules: recursive
+          submodules: recursive  # Initializes and updates submodules
 
-      - name: Cache Buildroot downloads
-        uses: actions/cache@v3
+      - name: Set up SSH agent
+        uses: webfactory/ssh-agent@v0.5.3
         with:
-          path: buildroot/dl
-          key: buildroot-dl-${{ hashFiles('**/Config.in') }}
-
-      - name: Cache Buildroot output directory
-        uses: actions/cache@v3
-        with:
-          path: buildroot/output
-          key: buildroot-output-${{ hashFiles('buildroot/.config') }}
-
-      - name: Show system info
-        run: |
-          echo "CPU Info:"
-          lscpu
-          echo "Memory:"
-          free -h
-          echo "Disk Space:"
-          df -h
-          echo "Available cores: $(nproc)"
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}  # Loads the SSH private key from GitHub Secrets
 
       - name: Run full test with parallel build
+        env:
+          GIT_SSH_COMMAND: "ssh -o StrictHostKeyChecking=no"  # Disables strict host key checking for SSH
         run: |
           echo "Starting test at $(date)"
           chmod +x ./full-test.sh
-          export MAKEFLAGS="-j$(nproc)"
+          export MAKEFLAGS="-j$(nproc)"  # Utilizes all available CPU cores for parallel build
           ./full-test.sh
           echo "Test completed at $(date)"
+
+      - name: Cleanup SSH agent
+        if: always()
+        run: |
+          ssh-add -D  # Removes all identities from the SSH agent
 
