--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -3,30 +3,30 @@ name: assignment-test
 on:
   push:
     branches:
-      - '**'
+      - '**'  # triggers on all branches
 
 jobs:
   full-test:
     runs-on: self-hosted
     container:
       image: cuaesd/aesd-autotest:24-assignment5-buildroot
-      options: --cpus 8 --memory 8g
+      options: --cpus 8 --memory 8g  # adjust memory if host can support more
 
     steps:
-      # Checkout repo + submodules
+      # 1️⃣ Checkout repo + submodules
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
           submodules: recursive
 
-      # Setup SSH (for cloning private repos)
+      # 2️⃣ Setup SSH agent (for private repos)
       - name: Set up SSH agent
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      # 🧱 Cache all Buildroot artifacts and compiler cache
-      - name: Cache Buildroot data
+      # 3️⃣ Cache Buildroot downloads, outputs, and compiler cache
+      - name: Cache Buildroot artifacts
         uses: actions/cache@v3
         with:
           path: |
@@ -40,29 +40,29 @@ jobs:
           restore-keys: |
             buildroot-${{ runner.os }}-
 
-      # ⚙️ Configure environment for parallel + cached builds
+      # 4️⃣ Configure environment
       - name: Configure Buildroot environment
         run: |
           echo "Container sees $(nproc) CPUs"
-          export MAKEFLAGS="-j$(nproc)"
+          # ⚠️ Limit parallel jobs to 2 to avoid OOM
+          export MAKEFLAGS="-j2"
           echo "MAKEFLAGS=$MAKEFLAGS"
 
-          # Enable ccache directory
           mkdir -p buildroot/.ccache
           export BR2_CCACHE=y
           export BR2_CCACHE_DIR="/__w/${{ github.repository }}/buildroot/.ccache"
           echo "BR2_CCACHE_DIR=$BR2_CCACHE_DIR"
 
-      # 🚀 Run full test
+      # 5️⃣ Run full test
       - name: Run full test
         env:
           GIT_SSH_COMMAND: "ssh -o StrictHostKeyChecking=no"
-          MAKEFLAGS: "-j$(nproc)"
+          MAKEFLAGS: "-j2"
         run: |
           chmod +x ./full-test.sh
           ./full-test.sh
 
-      # 🧹 Clean up
+      # 6️⃣ Cleanup SSH agent
       - name: Cleanup SSH agent
         if: always()
         run: ssh-add -D
