--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -58,6 +58,7 @@ jobs:
         env:
           GIT_SSH_COMMAND: "ssh -o StrictHostKeyChecking=no"
           SKIP_QEMU: 1
+          SKIP_BUILD: 1
           MAKEFLAGS: "-j2"
         run: |
           chmod +x ./full-test.sh
